...
                Text(text = stringResource(id = R.string.artistsRoute))
            },
            colors =
                NavigationBarItemDefaults.colors(
                    indicatorColor = MaterialTheme.colorScheme.background,
                ),
            modifier = Modifier.testTag("NavigateToArtistsBottom"),
        )

        NavigationBarItem(
            selected = selectedItemIndex == 1,
            onClick = {
                goToInstruments()
...
                Text(text = stringResource(id = R.string.instrumentsRoute))
            },
            colors =
                NavigationBarItemDefaults.colors(
                    indicatorColor = MaterialTheme.colorScheme.background,
                ),
            modifier = Modifier.testTag("NavigateToInstrumentsBottom"),
        )
    }
}

