...
                modifier =
                    Modifier
                        .clickable {
                            onBack()
                        }
                        .padding(8.dp)
                        .testTag("BackButton"),
            )
        }
        when (detailViewModel.instrumentApiState) {
            InstrumentApiState.Success ->
                instrument?.let {
                    InstrumentDetail(
...
            modifier
                .padding(8.dp)
                .fillMaxSize(),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center,
    ) {
        DetailImage(
            id = R.drawable.instrumentsicon,
            contentDescription = "Instrument Icon",
        )
        Text(
            instrument.name,
            style =
...
